# HSFailureCase

./: README.md  SampleFailure.cabal
app/: Main.hs
