Name: SampleFailure
Version: 0.0.1
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Ian O Connell
Author: Ian O Connell
Maintainer: hs@ianoc.net
Bug-Reports: https://github.com/ianoc/SampleFailure
Synopsis: Sample Failure
Description: Sample Failure
Source-Repository head
    Type: git
    Location: https://github.com/ianoc/SampleFailure

executable sampleFailure
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , text
  default-language:    Haskell2010
